--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mongodb": "^3.0.7",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "validator": "^10.8.0"
   },
   "devDependencies": {
     "expect": "^23.6.0",
