--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha --timeout 10000 server/**/*.test.js",
     "test-watch": "nodemon --exec npm test"
   },
   "engines": {
@@ -18,16 +18,16 @@
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.3.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
-    "mongodb": "^3.0.7",
-    "mongoose": "^5.1.6",
-    "validator": "^10.8.0"
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.20",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
-    "nodemon": "^1.18.4",
-    "supertest": "^3.3.0"
+    "nodemon": "^1.18.10",
+    "supertest": "^3.4.2"
   }
 }
